--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ webCodeLanguage = de
 kwc.pageCategories.main = Main
 kwc.pageCategories.bottom = Bottom
 
-preview.responsive = true
+kwc.responsive = true
 kwc.mobileBreakpoints = true
 
 kwc.rootComponent = Root_Component
@@ -23,7 +23,7 @@ kwc.childComponents.Kwc_Paragraphs_Component.image = Kwc_Basic_Image_Component
 kwc.childComponents.Kwc_Paragraphs_Component.space = Kwc_Basic_Space_Component
 kwc.childComponents.Kwc_Paragraphs_Component.downloads =  Kwc_List_Downloads_Component
 kwc.childComponents.Kwc_Paragraphs_Component.links = Kwc_List_Links_Component
-kwc.childComponents.Kwc_Paragraphs_Component.columns = Kwc_Columns_Component
+kwc.childComponents.Kwc_Paragraphs_Component.columns = Kwc_Legacy_Columns_Component
 kwc.childComponents.Kwc_Paragraphs_Component.contact = Contact_Component
 kwc.childComponents.Kwc_Paragraphs_Component.googlemap = Kwc_Advanced_GoogleMap_Component
 kwc.childComponents.Kwc_Paragraphs_Component.imprint = Kwc_Advanced_Imprint_Imprint_Component
