--- a/dependencies.ini
+++ b/dependencies.ini
@@ -1,3 +1,11 @@
 [dependencies]
+Frontend.dep[] = KwfSwitchHoverFade
+Frontend.dep[] = Components
 Admin.files[] = web/js/*
-
+Admin.dep[] = Frontend
+Admin.dep[] = ComponentsAdmin
+Admin.dep[] = KwfComponent
+Admin.dep[] = KwfAutoAssignGrid
+Admin.dep[] = ExtFormDateField
+Admin.dep[] = KwfFormSuperBoxSelect
+Admin.dep[] = KwfTrlAdmin
