Hinzufuegen von developer

--- a/config.ini
+++ b/config.ini
@@ -16,6 +16,9 @@ aclClass = Acl
 frontControllerClass = Kwf_Controller_Front_Component
 user.model = Users
 
+developers.benjamin.sendException = true
+developers.benjamin.sendClearCacheReport = false
+
 server.domain = vtinfos.local
 
 kwc.childComponents.Kwc_Paragraphs_Component.textImage = Kwc_TextImage_Component
