--- a/config.ini
+++ b/config.ini
@@ -27,18 +27,23 @@ kwc.childComponents.Kwc_Paragraphs_Component.space = Kwc_Basic_Space_Component
 kwc.childComponents.Kwc_Paragraphs_Component.downloads =  Kwc_List_Downloads_Component
 kwc.childComponents.Kwc_Paragraphs_Component.links = Kwc_List_Links_Component
 kwc.childComponents.Kwc_Paragraphs_Component.columns = Kwc_Legacy_Columns_Component
-kwc.childComponents.Kwc_Paragraphs_Component.contact = Contact_Component
 kwc.childComponents.Kwc_Paragraphs_Component.googlemap = Kwc_Advanced_GoogleMap_Component
 kwc.childComponents.Kwc_Paragraphs_Component.imprint = Kwc_Advanced_Imprint_Imprint_Component
 kwc.childComponents.Kwc_Paragraphs_Component.googleAnalytics = Kwc_Advanced_Imprint_GoogleAnalytics_Component
 kwc.childComponents.Kwc_Paragraphs_Component.disclaimer = Kwc_Advanced_Imprint_Disclaimer_Component
 
-kwc.childComponents.Kwc_Root_Category_Component.talks = Talks_Component
-kwc.childComponents.Kwc_Root_Category_Component.circles = Circles_Component
+kwc.childComponents.Kwc_Paragraphs_Component.userEdit = User_Edit_Component
+kwc.childComponents.Kwc_Paragraphs_Component.contact = Contact_Component
+kwc.childComponents.Kwc_Paragraphs_Component.congregationForm = Forms_Congregation_Component
+kwc.childComponents.Kwc_Paragraphs_Component.speakerForms = Forms_Speakers_Component
+
 kwc.childComponents.Kwc_Root_Category_Component.congregationForm = Forms_Congregation_Component
 kwc.childComponents.Kwc_Root_Category_Component.speakerForms = Forms_Speakers_Component
+
+kwc.childComponents.Kwc_Root_Category_Component.paragraphs = Paragraphs_Component
+kwc.childComponents.Kwc_Root_Category_Component.talks = Talks_Component
+kwc.childComponents.Kwc_Root_Category_Component.circles = Circles_Component
 kwc.childComponents.Kwc_Root_Category_Component.alphabeticalList = Directories_Congregations_Component
 kwc.childComponents.Kwc_Root_Category_Component.searchByTalks = Search_Talk_Component
-kwc.childComponents.Kwc_Root_Category_Component.paragraphs = Paragraphs_Component
 
 server.memcache.host = false
