Add library path to config ini

--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,8 @@ webCodeLanguage = de
 kwc.pageCategories.main = Main
 kwc.pageCategories.bottom = Bottom
 
+libraryPath = ../library
+
 kwc.responsive = true
 kwc.mobileBreakpoints = true
 
