Add select for user-form to select congregation

--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,8 @@ webCodeLanguage = de
 kwc.pageCategories.main = Main
 kwc.pageCategories.bottom = Bottom
 
+user.form.grid = UserForm
+
 libraryPath = ../library
 
 kwc.responsive = true
