Add components to style page

--- a/config.ini
+++ b/config.ini
@@ -27,6 +27,8 @@ server.domain = vtinfos.local
 
 kwc.childComponents.Kwc_Paragraphs_Component.textImage = Kwc_TextImage_Component
 kwc.childComponents.Kwc_Paragraphs_Component.image = Kwc_Basic_Image_Component
+kwc.childComponents.Kwc_Paragraphs_Component.headline = Kwc_Basic_Headline_Component
+kwc.childComponents.Kwc_Paragraphs_Component.line = Line_Component
 kwc.childComponents.Kwc_Paragraphs_Component.space = Kwc_Basic_Space_Component
 kwc.childComponents.Kwc_Paragraphs_Component.downloads =  Kwc_List_Downloads_Component
 kwc.childComponents.Kwc_Paragraphs_Component.links = Kwc_List_Links_Component
