Add change password component

--- a/config.ini
+++ b/config.ini
@@ -39,6 +39,7 @@ kwc.childComponents.Kwc_Paragraphs_Component.googleAnalytics = Kwc_Advanced_Impr
 kwc.childComponents.Kwc_Paragraphs_Component.disclaimer = Kwc_Advanced_Imprint_Disclaimer_Component
 
 kwc.childComponents.Kwc_Paragraphs_Component.userEdit = User_Edit_Component
+kwc.childComponents.Kwc_Paragraphs_Component.userChangePassword = User_ChangePassword_Component
 kwc.childComponents.Kwc_Paragraphs_Component.contact = Contact_Component
 kwc.childComponents.Kwc_Paragraphs_Component.congregationForm = Forms_Congregation_Component
 kwc.childComponents.Kwc_Paragraphs_Component.speakerForms = Forms_Speakers_Component
