--- a/config.ini
+++ b/config.ini
@@ -52,5 +52,6 @@ kwc.childComponents.Kwc_Root_Category_Component.talks = Talks_Component
 kwc.childComponents.Kwc_Root_Category_Component.circles = Circles_Component
 kwc.childComponents.Kwc_Root_Category_Component.alphabeticalList = Directories_Congregations_Component
 kwc.childComponents.Kwc_Root_Category_Component.searchByTalks = Search_Talk_Component
+kwc.childComponents.Kwc_Root_Category_Component.congregationsMap = Map_Directory_Component
 
 server.memcache.host = false
