--- a/config.ini
+++ b/config.ini
@@ -49,8 +49,9 @@ kwc.childComponents.Kwc_Root_Category_Component.speakerForms = Forms_Speakers_Co
 
 kwc.childComponents.Kwc_Root_Category_Component.paragraphs = Paragraphs_Component
 kwc.childComponents.Kwc_Root_Category_Component.talks = Talks_Component
-kwc.childComponents.Kwc_Root_Category_Component.circles = Directories_CircleGroups_Directory_Component
 kwc.childComponents.Kwc_Root_Category_Component.searchByTalks = Search_Talk_Component
+kwc.childComponents.Kwc_Root_Category_Component.circles = Directories_CircleGroups_Directory_Component
+kwc.childComponents.Kwc_Root_Category_Component.alphabetical = Directories_Congregations_Directory_Component
 kwc.childComponents.Kwc_Root_Category_Component.congregationsMap = Map_Directory_Component
 
 server.memcache.host = false
