--- a/config.ini
+++ b/config.ini
@@ -32,7 +32,7 @@ kwc.childComponents.Kwc_Paragraphs_Component.line = Line_Component
 kwc.childComponents.Kwc_Paragraphs_Component.space = Kwc_Basic_Space_Component
 kwc.childComponents.Kwc_Paragraphs_Component.downloads =  Kwc_List_Downloads_Component
 kwc.childComponents.Kwc_Paragraphs_Component.links = Kwc_List_Links_Component
-kwc.childComponents.Kwc_Paragraphs_Component.columns = Kwc_Legacy_Columns_Component
+kwc.childComponents.Kwc_Paragraphs_Component.columns = Kwc_Columns_Component
 kwc.childComponents.Kwc_Paragraphs_Component.googlemap = Kwc_Advanced_GoogleMap_Component
 kwc.childComponents.Kwc_Paragraphs_Component.imprint = Kwc_Advanced_Imprint_Imprint_Component
 kwc.childComponents.Kwc_Paragraphs_Component.googleAnalytics = Kwc_Advanced_Imprint_GoogleAnalytics_Component
