Umstellen auf https

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,8 @@ application.id = vtinfos
 uploads = ./uploads
 webCodeLanguage = de
 
+server.https = true
+
 kwc.pageCategories.main = Main
 kwc.pageCategories.bottom = Bottom
 
