--- a/app/manifest.json
+++ b/app/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/login",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
 }
