--- a/app/manifest.json
+++ b/app/manifest.json
@@ -3,17 +3,17 @@
   "name": "vtinfos.com",
   "icons": [
     {
-      "src": "launcher-icon-2x.png",
+      "src": "/assets/web/images/apple-touch-icon-114x114.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "launcher-icon-3x.png",
+      "src": "/assets/web/images/apple-touch-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "launcher-icon-4x.png",
+      "src": "/assets/web/images/apple-touch-icon-152x152.png",
       "sizes": "192x192",
       "type": "image/png"
     }
