--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,24 +1,11 @@
 {
-  "short_name": "vtinfos.com",
+  "short_name": "vtinfos",
   "name": "vtinfos.com",
-  "icons": [
-    {
-      "src": "/assets/web/images/apple-touch-icon-114x114.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/web/images/apple-touch-icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/web/images/apple-touch-icon-152x152.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
+  "icons":{
+      "114": "/assets/web/images/apple-touch-icon-114x114.png",
+      "144": "/assets/web/images/apple-touch-icon-144x144.png",
+      "152": "/assets/web/images/apple-touch-icon-152x152.png"
+  },
   "start_url": "/",
-  "display": "standalone",
-  "orientation": "portrait"
+  "display": "standalone"
 }
