--- a/config.ini
+++ b/config.ini
@@ -45,6 +45,7 @@ kwc.childComponents.Kwc_Paragraphs_Component.userChangePassword = User_ChangePas
 kwc.childComponents.Kwc_Paragraphs_Component.contact = Contact_Component
 kwc.childComponents.Kwc_Paragraphs_Component.congregationForm = Forms_Congregation_Component
 kwc.childComponents.Kwc_Paragraphs_Component.speakerForms = Forms_Speakers_Component
+kwc.childComponents.Kwc_Paragraphs_Component.hiddenFeatures = HiddenFeatures_Component
 
 kwc.childComponents.Kwc_Root_Category_Component.congregationForm = Forms_Congregation_Component
 kwc.childComponents.Kwc_Root_Category_Component.speakerForms = Forms_Speakers_Component
