--- a/config.ini
+++ b/config.ini
@@ -50,6 +50,8 @@ kwc.childComponents.Kwc_Paragraphs_Component.hiddenFeatures = HiddenFeatures_Com
 kwc.childComponents.Kwc_Root_Category_Component.congregationForm = Forms_Congregation_Component
 kwc.childComponents.Kwc_Root_Category_Component.speakerForms = Forms_Speakers_Component
 
+kwc.childComponents.Kwc_Root_Category_Component.calendar = Calendar_Component
+
 kwc.childComponents.Kwc_Root_Category_Component.paragraphs = Paragraphs_Component
 kwc.childComponents.Kwc_Root_Category_Component.talks = Talks_Component
 kwc.childComponents.Kwc_Root_Category_Component.searchByTalks = Search_Speakers_Directory_Component
