--- a/config.ini
+++ b/config.ini
@@ -58,3 +58,5 @@ kwc.childComponents.Kwc_Root_Category_Component.alphabetical = Directories_Congr
 kwc.childComponents.Kwc_Root_Category_Component.congregationsMap = Map_Directory_Component
 
 server.memcache.host = false
+
+googleMapsApiKey = AIzaSyBJ0o7-YShH39RMNOPOz6JJXzgZtlBUFrc
