--- a/dependencies.ini
+++ b/dependencies.ini
@@ -1,10 +1,13 @@
 [dependencies]
-Frontend.dep[] = KwfSwitchHoverFade
 Frontend.dep[] = Components
-Admin.files[] = web/js/*
+Frontend.dep[] = FrontendCore
+Frontend.dep[] = KwfSwitchHoverFade
+
+Admin.dep[] = FrontendCore
 Admin.dep[] = Frontend
 Admin.dep[] = ComponentsAdmin
 Admin.dep[] = KwfComponent
 Admin.dep[] = KwfAutoAssignGrid
 Admin.dep[] = ExtFormDateField
 Admin.dep[] = KwfFormSuperBoxSelect
+Admin.files[] = web/js/*
