Anlegen von TalksByCategory-Component.

--- a/config.ini
+++ b/config.ini
@@ -57,6 +57,7 @@ kwc.childComponents.Kwc_Root_Category_Component.searchByTalks = Search_Speakers_
 kwc.childComponents.Kwc_Root_Category_Component.circles = Directories_CircleGroups_Directory_Component
 kwc.childComponents.Kwc_Root_Category_Component.alphabetical = Directories_Congregations_Directory_Component
 kwc.childComponents.Kwc_Root_Category_Component.congregationsMap = Map_Directory_Component
+kwc.childComponents.Kwc_Root_Category_Component.talksByCategory = TalksByCategory_Component
 
 server.memcache.host = false
 
