--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "koala-framework/koala-framework": "4.4.x-dev",
-        "koala-framework/kwc-susy": "1.0.x-dev"
+        "koala-framework/kwc-susy": "1.0.x-dev",
+        "tecnickcom/tcpdf": "6.0.097"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
