Implement react search + improve search-api

--- a/symfony/src/AppBundle/Resources/config/services.yml
+++ b/symfony/src/AppBundle/Resources/config/services.yml
@@ -6,3 +6,5 @@ services:
         class: KwfBundle\Rest\Handler
         arguments:
             - "@app.model.speakers"
+            - "@security.authorization_checker"
+            - "@validator"
