--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
             "immutable": "^3.8.1",
             "axios": "^0.15.2",
             "redux-act": "^1.1.0",
-            "prop-types": "^15.5.10"
+            "prop-types": "^15.5.10",
+            "float-label-css": "1.0.2"
         }
     },
     "config": {
