--- a/config.ini
+++ b/config.ini
@@ -54,6 +54,8 @@ kwc.childComponents.Kwc_Root_Category_Component.speakerForms = Forms_Speakers_Co
 kwc.childComponents.Kwc_Root_Category_Component.paragraphs = Paragraphs_Component
 kwc.childComponents.Kwc_Root_Category_Component.talks = Talks_Component
 kwc.childComponents.Kwc_Root_Category_Component.searchByTalks = Search_Speakers_Directory_Component
+kwc.childComponents.Kwc_Root_Category_Component.search = Search_Component
+
 kwc.childComponents.Kwc_Root_Category_Component.circles = Directories_CircleGroups_Directory_Component
 kwc.childComponents.Kwc_Root_Category_Component.alphabetical = Directories_Congregations_Directory_Component
 kwc.childComponents.Kwc_Root_Category_Component.congregationsMap = Map_Directory_Component
