--- a/config.ini
+++ b/config.ini
@@ -27,6 +27,8 @@ developers.benjamin.sendException = true
 developers.benjamin.sendClearCacheReport = false
 
 server.domain = vtinfos.local
+debug.webpackDevServer = true
+debug.webpackDevServerPort = 1025
 
 kwc.childComponents.Kwc_Paragraphs_Component.textImage = Kwc_TextImage_Component
 kwc.childComponents.Kwc_Paragraphs_Component.image = Kwc_Basic_Image_Component
