--- a/dependencies.ini
+++ b/dependencies.ini
@@ -1,13 +1,15 @@
 [dependencies]
-Frontend.dep[] = Components
-Frontend.dep[] = FrontendCore
-Frontend.dep[] = KwfSwitchHoverFade
+;Frontend.dep[] = Components
+;Frontend.dep[] = FrontendCore
+;Frontend.dep[] = KwfSwitchHoverFade
 
-Admin.dep[] = FrontendCore
-Admin.dep[] = Frontend
+;Admin.dep[] = FrontendCore
+;Admin.dep[] = Frontend
 Admin.dep[] = ComponentsAdmin
 Admin.dep[] = KwfComponent
 Admin.dep[] = KwfAutoAssignGrid
 Admin.dep[] = ExtFormDateField
 Admin.dep[] = KwfFormSuperBoxSelect
-Admin.files[] = web/js/*
+Admin.files[] = web/js/Structure.js
+Admin.files[] = web/js/TalkCategories.js
+Admin.files[] = web/js/Talks.js
