unique prefix aktiviert (sonst steht undefined-xxx)

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 application.name = VtInfos
 application.version = 1.0.0
 application.id = vtinfos
-;application.uniquePrefix = vtinfos
+application.uniquePrefix = vtinfos
 uploads = ./uploads
 webCodeLanguage = de
 
