Implement datenschutz component

--- a/config.ini
+++ b/config.ini
@@ -46,6 +46,7 @@ kwc.childComponents.Kwc_Paragraphs_Component.contact = Contact_Component
 kwc.childComponents.Kwc_Paragraphs_Component.congregationForm = Forms_Congregation_Component
 kwc.childComponents.Kwc_Paragraphs_Component.speakerForms = Forms_Speakers_Component
 kwc.childComponents.Kwc_Paragraphs_Component.hiddenFeatures = HiddenFeatures_Component
+kwc.childComponents.Kwc_Paragraphs_Component.dataProtection = DataProtection_Component
 
 kwc.childComponents.Kwc_Root_Category_Component.congregationForm = Forms_Congregation_Component
 kwc.childComponents.Kwc_Root_Category_Component.speakerForms = Forms_Speakers_Component
