--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ kwc.pageCategories.bottom = Bottom
 user.form.grid = UserForm
 
 libraryPath = ../library
+debug.webpackDevServer = false
 
 kwc.responsive = true
 kwc.mobileBreakpoints = true
@@ -27,8 +28,6 @@ developers.benjamin.sendException = true
 developers.benjamin.sendClearCacheReport = false
 
 server.domain = vtinfos.local
-debug.webpackDevServer = true
-debug.webpackDevServerPort = 1025
 
 kwc.childComponents.Kwc_Paragraphs_Component.textImage = Kwc_TextImage_Component
 kwc.childComponents.Kwc_Paragraphs_Component.image = Kwc_Basic_Image_Component
