--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,8 @@
         "sensio/framework-extra-bundle": "^3.0"
     },
     "autoload": {
-        "psr-0": {
-            "AppBundle": "symfony/src",
-            "KwfComponentBundle": "symfony/src"
+        "psr-4": {
+            "App\\": "symfony/src"
         },
         "classmap": [
             "symfony/AppKernel.php"
