--- a/symfony/config/routing.yml
+++ b/symfony/config/routing.yml
@@ -1,3 +1,5 @@
-api:
-    resource: "@AppBundle/Resources/config/routing.yml"
-    prefix:   /
+speaker-search:
+    path: /api/v1/speakers/search
+    methods: [GET]
+    defaults:
+        _controller: AppBundle\Controller\SpeakersController::searchAction
