--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "symfony/symfony": "~2.8",
         "friendsofsymfony/rest-bundle": "^1.7",
         "symfony/monolog-bundle": "~2.8",
-        "sensio/framework-extra-bundle": "^3.0"
+        "sensio/framework-extra-bundle": "^3.0",
+        "bshaffer/oauth2-server-php": "~1.11.1",
+        "bshaffer/oauth2-server-httpfoundation-bridge": "~1.4"
     },
     "autoload": {
         "psr-4": {
