--- a/symfony/config/security.yml
+++ b/symfony/config/security.yml
@@ -8,6 +8,7 @@ security:
 
     access_control:
         - { path: ^/api/v1/oauth/authorize, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/api/v1/oauth/token, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
         - { path: ^/api, roles: [ROLE_USER] }
 
     role_hierarchy:
