--- a/symfony/config/config.yml
+++ b/symfony/config/config.yml
@@ -20,4 +20,24 @@ fos_rest:
 kwf:
     csrf_protection:
         ignore_paths:
-            - /api/v1/oauth/authorize
+            - /api/v1/oauth
+
+nelmio_cors:
+    defaults:
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+        hosts: []
+        origin_regex: false
+        forced_allow_origin_value: ~
+    paths:
+        '^/api/':
+            origin_regex: true
+            allow_credentials: true
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['GET', 'OPTIONS', 'POST']
+            max_age: 3600
