--- a/symfony/config/security.yml
+++ b/symfony/config/security.yml
@@ -7,8 +7,9 @@ security:
         allow_if_all_abstain: true
 
     access_control:
-        - { path: ^/api/v1/oauth/authorize, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/api/v1/oauth, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
         - { path: ^/api/v1/oauth/token, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/api/v1/oauth/.well-known/openid-configuration, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
         - { path: ^/api, roles: [ROLE_USER] }
 
     role_hierarchy:
